parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> html
Rule 1     html -> linhas
Rule 2     linhas -> linhas NEWLINE linha_normal
Rule 3     linhas -> linha_normal
Rule 4     linhas -> linhas NEWLINE linha_codigo
Rule 5     linhas -> linha_codigo
Rule 6     linhas -> linhas NEWLINE linha_var
Rule 7     linhas -> linha_var
Rule 8     linhas -> linhas NEWLINE linha_textplain
Rule 9     linha_var -> IDENTACAO VAR TEXTO EQUAL TEXTO
Rule 10    linha_var -> VAR TEXTO EQUAL TEXTO
Rule 11    linha_codigo -> IDENTACAO IF TEXTO
Rule 12    linha_codigo -> IF TEXTO
Rule 13    linha_codigo -> IDENTACAO ELSE
Rule 14    linha_codigo -> ELSE
Rule 15    linha_normal -> IDENTACAO corpo COMA
Rule 16    linha_normal -> IDENTACAO corpo
Rule 17    linha_normal -> corpo
Rule 18    linha_textplain -> IDENTACAO TEXTPLAIN
Rule 19    corpo -> tag
Rule 20    corpo -> tag SPACE TEXTO
Rule 21    corpo -> tag EQUAL SPACE TEXTO
Rule 22    tag -> tag TAG atributos_linha
Rule 23    tag -> tag CLASS atributos_linha
Rule 24    tag -> tag ID atributos_linha
Rule 25    tag -> <empty>
Rule 26    atributos_linha -> LPAREN atributos RPAREN
Rule 27    atributos_linha -> <empty>
Rule 28    atributos -> ATRIBUT
Rule 29    atributos -> ATRIBUT atributos

Terminals, with rules where they appear

ATRIBUT              : 28 29
CLASS                : 23
COMA                 : 15
ELSE                 : 13 14
EQUAL                : 9 10 21
ID                   : 24
IDENTACAO            : 9 11 13 15 16 18
IF                   : 11 12
LPAREN               : 26
NEWLINE              : 2 4 6 8
RPAREN               : 26
SPACE                : 20 21
TAG                  : 22
TEXTO                : 9 9 10 10 11 12 20 21
TEXTPLAIN            : 18
VAR                  : 9 10
error                : 

Nonterminals, with rules where they appear

atributos            : 26 29
atributos_linha      : 22 23 24
corpo                : 15 16 17
html                 : 0
linha_codigo         : 4 5
linha_normal         : 2 3
linha_textplain      : 8
linha_var            : 6 7
linhas               : 1 2 4 6 8
tag                  : 19 20 21 22 23 24

Parsing method: LALR

state 0

    (0) S' -> . html
    (1) html -> . linhas
    (2) linhas -> . linhas NEWLINE linha_normal
    (3) linhas -> . linha_normal
    (4) linhas -> . linhas NEWLINE linha_codigo
    (5) linhas -> . linha_codigo
    (6) linhas -> . linhas NEWLINE linha_var
    (7) linhas -> . linha_var
    (8) linhas -> . linhas NEWLINE linha_textplain
    (15) linha_normal -> . IDENTACAO corpo COMA
    (16) linha_normal -> . IDENTACAO corpo
    (17) linha_normal -> . corpo
    (11) linha_codigo -> . IDENTACAO IF TEXTO
    (12) linha_codigo -> . IF TEXTO
    (13) linha_codigo -> . IDENTACAO ELSE
    (14) linha_codigo -> . ELSE
    (9) linha_var -> . IDENTACAO VAR TEXTO EQUAL TEXTO
    (10) linha_var -> . VAR TEXTO EQUAL TEXTO
    (19) corpo -> . tag
    (20) corpo -> . tag SPACE TEXTO
    (21) corpo -> . tag EQUAL SPACE TEXTO
    (22) tag -> . tag TAG atributos_linha
    (23) tag -> . tag CLASS atributos_linha
    (24) tag -> . tag ID atributos_linha
    (25) tag -> .

    IDENTACAO       shift and go to state 6
    IF              shift and go to state 8
    ELSE            shift and go to state 9
    VAR             shift and go to state 10
    SPACE           reduce using rule 25 (tag -> .)
    EQUAL           reduce using rule 25 (tag -> .)
    TAG             reduce using rule 25 (tag -> .)
    CLASS           reduce using rule 25 (tag -> .)
    ID              reduce using rule 25 (tag -> .)
    NEWLINE         reduce using rule 25 (tag -> .)
    $end            reduce using rule 25 (tag -> .)

    html                           shift and go to state 1
    linhas                         shift and go to state 2
    linha_normal                   shift and go to state 3
    linha_codigo                   shift and go to state 4
    linha_var                      shift and go to state 5
    corpo                          shift and go to state 7
    tag                            shift and go to state 11

state 1

    (0) S' -> html .



state 2

    (1) html -> linhas .
    (2) linhas -> linhas . NEWLINE linha_normal
    (4) linhas -> linhas . NEWLINE linha_codigo
    (6) linhas -> linhas . NEWLINE linha_var
    (8) linhas -> linhas . NEWLINE linha_textplain

    $end            reduce using rule 1 (html -> linhas .)
    NEWLINE         shift and go to state 12


state 3

    (3) linhas -> linha_normal .

    NEWLINE         reduce using rule 3 (linhas -> linha_normal .)
    $end            reduce using rule 3 (linhas -> linha_normal .)


state 4

    (5) linhas -> linha_codigo .

    NEWLINE         reduce using rule 5 (linhas -> linha_codigo .)
    $end            reduce using rule 5 (linhas -> linha_codigo .)


state 5

    (7) linhas -> linha_var .

    NEWLINE         reduce using rule 7 (linhas -> linha_var .)
    $end            reduce using rule 7 (linhas -> linha_var .)


state 6

    (15) linha_normal -> IDENTACAO . corpo COMA
    (16) linha_normal -> IDENTACAO . corpo
    (11) linha_codigo -> IDENTACAO . IF TEXTO
    (13) linha_codigo -> IDENTACAO . ELSE
    (9) linha_var -> IDENTACAO . VAR TEXTO EQUAL TEXTO
    (19) corpo -> . tag
    (20) corpo -> . tag SPACE TEXTO
    (21) corpo -> . tag EQUAL SPACE TEXTO
    (22) tag -> . tag TAG atributos_linha
    (23) tag -> . tag CLASS atributos_linha
    (24) tag -> . tag ID atributos_linha
    (25) tag -> .

    IF              shift and go to state 14
    ELSE            shift and go to state 15
    VAR             shift and go to state 16
    SPACE           reduce using rule 25 (tag -> .)
    EQUAL           reduce using rule 25 (tag -> .)
    TAG             reduce using rule 25 (tag -> .)
    CLASS           reduce using rule 25 (tag -> .)
    ID              reduce using rule 25 (tag -> .)
    COMA            reduce using rule 25 (tag -> .)
    NEWLINE         reduce using rule 25 (tag -> .)
    $end            reduce using rule 25 (tag -> .)

    corpo                          shift and go to state 13
    tag                            shift and go to state 11

state 7

    (17) linha_normal -> corpo .

    NEWLINE         reduce using rule 17 (linha_normal -> corpo .)
    $end            reduce using rule 17 (linha_normal -> corpo .)


state 8

    (12) linha_codigo -> IF . TEXTO

    TEXTO           shift and go to state 17


state 9

    (14) linha_codigo -> ELSE .

    NEWLINE         reduce using rule 14 (linha_codigo -> ELSE .)
    $end            reduce using rule 14 (linha_codigo -> ELSE .)


state 10

    (10) linha_var -> VAR . TEXTO EQUAL TEXTO

    TEXTO           shift and go to state 18


state 11

    (19) corpo -> tag .
    (20) corpo -> tag . SPACE TEXTO
    (21) corpo -> tag . EQUAL SPACE TEXTO
    (22) tag -> tag . TAG atributos_linha
    (23) tag -> tag . CLASS atributos_linha
    (24) tag -> tag . ID atributos_linha

    NEWLINE         reduce using rule 19 (corpo -> tag .)
    $end            reduce using rule 19 (corpo -> tag .)
    COMA            reduce using rule 19 (corpo -> tag .)
    SPACE           shift and go to state 19
    EQUAL           shift and go to state 20
    TAG             shift and go to state 21
    CLASS           shift and go to state 22
    ID              shift and go to state 23


state 12

    (2) linhas -> linhas NEWLINE . linha_normal
    (4) linhas -> linhas NEWLINE . linha_codigo
    (6) linhas -> linhas NEWLINE . linha_var
    (8) linhas -> linhas NEWLINE . linha_textplain
    (15) linha_normal -> . IDENTACAO corpo COMA
    (16) linha_normal -> . IDENTACAO corpo
    (17) linha_normal -> . corpo
    (11) linha_codigo -> . IDENTACAO IF TEXTO
    (12) linha_codigo -> . IF TEXTO
    (13) linha_codigo -> . IDENTACAO ELSE
    (14) linha_codigo -> . ELSE
    (9) linha_var -> . IDENTACAO VAR TEXTO EQUAL TEXTO
    (10) linha_var -> . VAR TEXTO EQUAL TEXTO
    (18) linha_textplain -> . IDENTACAO TEXTPLAIN
    (19) corpo -> . tag
    (20) corpo -> . tag SPACE TEXTO
    (21) corpo -> . tag EQUAL SPACE TEXTO
    (22) tag -> . tag TAG atributos_linha
    (23) tag -> . tag CLASS atributos_linha
    (24) tag -> . tag ID atributos_linha
    (25) tag -> .

    IDENTACAO       shift and go to state 28
    IF              shift and go to state 8
    ELSE            shift and go to state 9
    VAR             shift and go to state 10
    SPACE           reduce using rule 25 (tag -> .)
    EQUAL           reduce using rule 25 (tag -> .)
    TAG             reduce using rule 25 (tag -> .)
    CLASS           reduce using rule 25 (tag -> .)
    ID              reduce using rule 25 (tag -> .)
    NEWLINE         reduce using rule 25 (tag -> .)
    $end            reduce using rule 25 (tag -> .)

    linha_normal                   shift and go to state 24
    linha_codigo                   shift and go to state 25
    linha_var                      shift and go to state 26
    linha_textplain                shift and go to state 27
    corpo                          shift and go to state 7
    tag                            shift and go to state 11

state 13

    (15) linha_normal -> IDENTACAO corpo . COMA
    (16) linha_normal -> IDENTACAO corpo .

    COMA            shift and go to state 29
    NEWLINE         reduce using rule 16 (linha_normal -> IDENTACAO corpo .)
    $end            reduce using rule 16 (linha_normal -> IDENTACAO corpo .)


state 14

    (11) linha_codigo -> IDENTACAO IF . TEXTO

    TEXTO           shift and go to state 30


state 15

    (13) linha_codigo -> IDENTACAO ELSE .

    NEWLINE         reduce using rule 13 (linha_codigo -> IDENTACAO ELSE .)
    $end            reduce using rule 13 (linha_codigo -> IDENTACAO ELSE .)


state 16

    (9) linha_var -> IDENTACAO VAR . TEXTO EQUAL TEXTO

    TEXTO           shift and go to state 31


state 17

    (12) linha_codigo -> IF TEXTO .

    NEWLINE         reduce using rule 12 (linha_codigo -> IF TEXTO .)
    $end            reduce using rule 12 (linha_codigo -> IF TEXTO .)


state 18

    (10) linha_var -> VAR TEXTO . EQUAL TEXTO

    EQUAL           shift and go to state 32


state 19

    (20) corpo -> tag SPACE . TEXTO

    TEXTO           shift and go to state 33


state 20

    (21) corpo -> tag EQUAL . SPACE TEXTO

    SPACE           shift and go to state 34


state 21

    (22) tag -> tag TAG . atributos_linha
    (26) atributos_linha -> . LPAREN atributos RPAREN
    (27) atributos_linha -> .

    LPAREN          shift and go to state 36
    SPACE           reduce using rule 27 (atributos_linha -> .)
    EQUAL           reduce using rule 27 (atributos_linha -> .)
    TAG             reduce using rule 27 (atributos_linha -> .)
    CLASS           reduce using rule 27 (atributos_linha -> .)
    ID              reduce using rule 27 (atributos_linha -> .)
    NEWLINE         reduce using rule 27 (atributos_linha -> .)
    $end            reduce using rule 27 (atributos_linha -> .)
    COMA            reduce using rule 27 (atributos_linha -> .)

    atributos_linha                shift and go to state 35

state 22

    (23) tag -> tag CLASS . atributos_linha
    (26) atributos_linha -> . LPAREN atributos RPAREN
    (27) atributos_linha -> .

    LPAREN          shift and go to state 36
    SPACE           reduce using rule 27 (atributos_linha -> .)
    EQUAL           reduce using rule 27 (atributos_linha -> .)
    TAG             reduce using rule 27 (atributos_linha -> .)
    CLASS           reduce using rule 27 (atributos_linha -> .)
    ID              reduce using rule 27 (atributos_linha -> .)
    NEWLINE         reduce using rule 27 (atributos_linha -> .)
    $end            reduce using rule 27 (atributos_linha -> .)
    COMA            reduce using rule 27 (atributos_linha -> .)

    atributos_linha                shift and go to state 37

state 23

    (24) tag -> tag ID . atributos_linha
    (26) atributos_linha -> . LPAREN atributos RPAREN
    (27) atributos_linha -> .

    LPAREN          shift and go to state 36
    SPACE           reduce using rule 27 (atributos_linha -> .)
    EQUAL           reduce using rule 27 (atributos_linha -> .)
    TAG             reduce using rule 27 (atributos_linha -> .)
    CLASS           reduce using rule 27 (atributos_linha -> .)
    ID              reduce using rule 27 (atributos_linha -> .)
    NEWLINE         reduce using rule 27 (atributos_linha -> .)
    $end            reduce using rule 27 (atributos_linha -> .)
    COMA            reduce using rule 27 (atributos_linha -> .)

    atributos_linha                shift and go to state 38

state 24

    (2) linhas -> linhas NEWLINE linha_normal .

    NEWLINE         reduce using rule 2 (linhas -> linhas NEWLINE linha_normal .)
    $end            reduce using rule 2 (linhas -> linhas NEWLINE linha_normal .)


state 25

    (4) linhas -> linhas NEWLINE linha_codigo .

    NEWLINE         reduce using rule 4 (linhas -> linhas NEWLINE linha_codigo .)
    $end            reduce using rule 4 (linhas -> linhas NEWLINE linha_codigo .)


state 26

    (6) linhas -> linhas NEWLINE linha_var .

    NEWLINE         reduce using rule 6 (linhas -> linhas NEWLINE linha_var .)
    $end            reduce using rule 6 (linhas -> linhas NEWLINE linha_var .)


state 27

    (8) linhas -> linhas NEWLINE linha_textplain .

    NEWLINE         reduce using rule 8 (linhas -> linhas NEWLINE linha_textplain .)
    $end            reduce using rule 8 (linhas -> linhas NEWLINE linha_textplain .)


state 28

    (15) linha_normal -> IDENTACAO . corpo COMA
    (16) linha_normal -> IDENTACAO . corpo
    (11) linha_codigo -> IDENTACAO . IF TEXTO
    (13) linha_codigo -> IDENTACAO . ELSE
    (9) linha_var -> IDENTACAO . VAR TEXTO EQUAL TEXTO
    (18) linha_textplain -> IDENTACAO . TEXTPLAIN
    (19) corpo -> . tag
    (20) corpo -> . tag SPACE TEXTO
    (21) corpo -> . tag EQUAL SPACE TEXTO
    (22) tag -> . tag TAG atributos_linha
    (23) tag -> . tag CLASS atributos_linha
    (24) tag -> . tag ID atributos_linha
    (25) tag -> .

    IF              shift and go to state 14
    ELSE            shift and go to state 15
    VAR             shift and go to state 16
    TEXTPLAIN       shift and go to state 39
    SPACE           reduce using rule 25 (tag -> .)
    EQUAL           reduce using rule 25 (tag -> .)
    TAG             reduce using rule 25 (tag -> .)
    CLASS           reduce using rule 25 (tag -> .)
    ID              reduce using rule 25 (tag -> .)
    COMA            reduce using rule 25 (tag -> .)
    NEWLINE         reduce using rule 25 (tag -> .)
    $end            reduce using rule 25 (tag -> .)

    corpo                          shift and go to state 13
    tag                            shift and go to state 11

state 29

    (15) linha_normal -> IDENTACAO corpo COMA .

    NEWLINE         reduce using rule 15 (linha_normal -> IDENTACAO corpo COMA .)
    $end            reduce using rule 15 (linha_normal -> IDENTACAO corpo COMA .)


state 30

    (11) linha_codigo -> IDENTACAO IF TEXTO .

    NEWLINE         reduce using rule 11 (linha_codigo -> IDENTACAO IF TEXTO .)
    $end            reduce using rule 11 (linha_codigo -> IDENTACAO IF TEXTO .)


state 31

    (9) linha_var -> IDENTACAO VAR TEXTO . EQUAL TEXTO

    EQUAL           shift and go to state 40


state 32

    (10) linha_var -> VAR TEXTO EQUAL . TEXTO

    TEXTO           shift and go to state 41


state 33

    (20) corpo -> tag SPACE TEXTO .

    NEWLINE         reduce using rule 20 (corpo -> tag SPACE TEXTO .)
    $end            reduce using rule 20 (corpo -> tag SPACE TEXTO .)
    COMA            reduce using rule 20 (corpo -> tag SPACE TEXTO .)


state 34

    (21) corpo -> tag EQUAL SPACE . TEXTO

    TEXTO           shift and go to state 42


state 35

    (22) tag -> tag TAG atributos_linha .

    SPACE           reduce using rule 22 (tag -> tag TAG atributos_linha .)
    EQUAL           reduce using rule 22 (tag -> tag TAG atributos_linha .)
    TAG             reduce using rule 22 (tag -> tag TAG atributos_linha .)
    CLASS           reduce using rule 22 (tag -> tag TAG atributos_linha .)
    ID              reduce using rule 22 (tag -> tag TAG atributos_linha .)
    NEWLINE         reduce using rule 22 (tag -> tag TAG atributos_linha .)
    $end            reduce using rule 22 (tag -> tag TAG atributos_linha .)
    COMA            reduce using rule 22 (tag -> tag TAG atributos_linha .)


state 36

    (26) atributos_linha -> LPAREN . atributos RPAREN
    (28) atributos -> . ATRIBUT
    (29) atributos -> . ATRIBUT atributos

    ATRIBUT         shift and go to state 44

    atributos                      shift and go to state 43

state 37

    (23) tag -> tag CLASS atributos_linha .

    SPACE           reduce using rule 23 (tag -> tag CLASS atributos_linha .)
    EQUAL           reduce using rule 23 (tag -> tag CLASS atributos_linha .)
    TAG             reduce using rule 23 (tag -> tag CLASS atributos_linha .)
    CLASS           reduce using rule 23 (tag -> tag CLASS atributos_linha .)
    ID              reduce using rule 23 (tag -> tag CLASS atributos_linha .)
    NEWLINE         reduce using rule 23 (tag -> tag CLASS atributos_linha .)
    $end            reduce using rule 23 (tag -> tag CLASS atributos_linha .)
    COMA            reduce using rule 23 (tag -> tag CLASS atributos_linha .)


state 38

    (24) tag -> tag ID atributos_linha .

    SPACE           reduce using rule 24 (tag -> tag ID atributos_linha .)
    EQUAL           reduce using rule 24 (tag -> tag ID atributos_linha .)
    TAG             reduce using rule 24 (tag -> tag ID atributos_linha .)
    CLASS           reduce using rule 24 (tag -> tag ID atributos_linha .)
    ID              reduce using rule 24 (tag -> tag ID atributos_linha .)
    NEWLINE         reduce using rule 24 (tag -> tag ID atributos_linha .)
    $end            reduce using rule 24 (tag -> tag ID atributos_linha .)
    COMA            reduce using rule 24 (tag -> tag ID atributos_linha .)


state 39

    (18) linha_textplain -> IDENTACAO TEXTPLAIN .

    NEWLINE         reduce using rule 18 (linha_textplain -> IDENTACAO TEXTPLAIN .)
    $end            reduce using rule 18 (linha_textplain -> IDENTACAO TEXTPLAIN .)


state 40

    (9) linha_var -> IDENTACAO VAR TEXTO EQUAL . TEXTO

    TEXTO           shift and go to state 45


state 41

    (10) linha_var -> VAR TEXTO EQUAL TEXTO .

    NEWLINE         reduce using rule 10 (linha_var -> VAR TEXTO EQUAL TEXTO .)
    $end            reduce using rule 10 (linha_var -> VAR TEXTO EQUAL TEXTO .)


state 42

    (21) corpo -> tag EQUAL SPACE TEXTO .

    NEWLINE         reduce using rule 21 (corpo -> tag EQUAL SPACE TEXTO .)
    $end            reduce using rule 21 (corpo -> tag EQUAL SPACE TEXTO .)
    COMA            reduce using rule 21 (corpo -> tag EQUAL SPACE TEXTO .)


state 43

    (26) atributos_linha -> LPAREN atributos . RPAREN

    RPAREN          shift and go to state 46


state 44

    (28) atributos -> ATRIBUT .
    (29) atributos -> ATRIBUT . atributos
    (28) atributos -> . ATRIBUT
    (29) atributos -> . ATRIBUT atributos

    RPAREN          reduce using rule 28 (atributos -> ATRIBUT .)
    ATRIBUT         shift and go to state 44

    atributos                      shift and go to state 47

state 45

    (9) linha_var -> IDENTACAO VAR TEXTO EQUAL TEXTO .

    NEWLINE         reduce using rule 9 (linha_var -> IDENTACAO VAR TEXTO EQUAL TEXTO .)
    $end            reduce using rule 9 (linha_var -> IDENTACAO VAR TEXTO EQUAL TEXTO .)


state 46

    (26) atributos_linha -> LPAREN atributos RPAREN .

    SPACE           reduce using rule 26 (atributos_linha -> LPAREN atributos RPAREN .)
    EQUAL           reduce using rule 26 (atributos_linha -> LPAREN atributos RPAREN .)
    TAG             reduce using rule 26 (atributos_linha -> LPAREN atributos RPAREN .)
    CLASS           reduce using rule 26 (atributos_linha -> LPAREN atributos RPAREN .)
    ID              reduce using rule 26 (atributos_linha -> LPAREN atributos RPAREN .)
    NEWLINE         reduce using rule 26 (atributos_linha -> LPAREN atributos RPAREN .)
    $end            reduce using rule 26 (atributos_linha -> LPAREN atributos RPAREN .)
    COMA            reduce using rule 26 (atributos_linha -> LPAREN atributos RPAREN .)


state 47

    (29) atributos -> ATRIBUT atributos .

    RPAREN          reduce using rule 29 (atributos -> ATRIBUT atributos .)

